fix(responsive): make site more responsive for phone, fix overflows and broken pages in phone

--- a/app/assets/stylesheets/select2_overrides.scss
+++ b/app/assets/stylesheets/select2_overrides.scss
@@ -1,19 +1,11 @@
-.select2-container {
-  span {
-    .select2-selection--multiple {
-      min-height: 150px;
-      min-width: 450px;
-    }
-  }
+.select2-container .select2-selection--multiple {
+  min-height: 150px;
+  min-width: 450px;
 }
 
-@media (max-width: 500px) {
-  .select2-container {
-    span {
-      .select2-selection--multiple {
-        min-width: 88vw;
-      }
-    }
+@media (max-width:500px) {
+  .select2-container .select2-selection--multiple {
+    min-width: 88vw;
   }
 }
 
